--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,13 @@ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   font-family: IranSans;
+  @media (min-width: 320px) {
+    font-size: 13px;
+  }
+
+  @media (min-width: 480px) {
+    font-size: 16px;
+  }
 }
 
 body {
